--- a/style_test2.css
+++ b/style_test2.css
@@ -26,6 +26,13 @@ font-size: 16px;
     float: right;
 }
 
+#book-source {
+  display: none;
+}
+
+#book-edit {
+  display: none;
+}
 
 li.book-part {
   font-size: 1.3em;
@@ -46,3 +53,7 @@ h1 {
   font-size: 2.5rem; /* adjust the font size as needed */
   color: #333; /* adjust the color as needed */
 }
+
+
+
+<a id="book-source" href="https://github.com/jennybc/happy-git-with-r/blob/main/usage-existing-project-github-last.Rmd">View source <i class="fab fa-github" aria-hidden="true"></i></a>
